[package]
name = "dlc-decrypter"
version = "0.0.1"
authors = ["Tobias Matt <t.matt81@gmail.com>"]
license = "MIT"
repository = "https://github.com/Bubblepoint/dlc-decoder"
description = "A decoder library for dlc files"

[dependencies]
rustc-serialize = "0.3"
rust-crypto = "0.2"
regex = "0.1"
reqwest = "0.8.1"
error-chain = "0.11.0"


[lib]
name = "dlc_decrypter"

[[bin]]
doc = false
name = "dlc_decrypter"
