[package]
name = "dlc-decrypter"
version = "0.1.0"
authors = ["Tobias Matt <t.matt81@gmail.com>"]
license = "MIT"
repository = "https://github.com/Bubblepoint/dlc-decoder"
description = "A decoder library for dlc files"

[dependencies]
error-chain = "0.11.0"
base64 = "0.7.0"
reqwest = "0.8.5"
rust-crypto = "0.2"
regex = "0.2.2"
openssl = "0.10.5"

[lib]
name = "dlc_decrypter"